# LinuxDevEnv4ArduinoDue

./: .gitmodules  README.md  new_project.sh
install/: ._setup-from-arduino-app.php  setup-from-arduino-app.php
install/resources/example/: main.c
project_template/: CMakeLists.txt  includes.list  libraries.list
project_template/cmake_include/: header_inc.cmake  libraries.cmake  libraries2.cmake  toolchain.cmake  uploader.cmake
project_template/scripts/: find_file.sh  find_inc.sh  find_src.sh
resources/example/: Makefile  main.cpp
resources/example-ng/: .CMakeLists.txt.swp  CMakeLists.txt
resources/example-ng/cmake_include/: libraries.cmake
resources/include/: due_sam3x.h
resources/make/: make_due_firmware.mk
tpl/: CMakeLists.txt  includes.list  libraries.list
tpl/cmake_include/: header_inc.cmake  libraries.cmake  toolchain.cmake
tpl/inc/: due_sam3x.h
tpl/src/: main.cpp
